--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,10 +75,9 @@
      <Compile Include="Assets\CodeMonkey\Utils\UI_Sprite.cs" />
      <Compile Include="Assets\Scripts\Priority Queue\Properties\AssemblyInfo.cs" />
      <Compile Include="Assets\Scripts\LightObject\LightManager.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerShoot.cs" />
      <Compile Include="Assets\Scripts\Priority Queue\FastPriorityQueueNode.cs" />
      <Compile Include="Assets\CodeMonkey\Utils\UI_TextComplex.cs" />
-     <Compile Include="Assets\Scripts\Player\Player.cs" />
+     <Compile Include="Assets\Scripts\old\PlayerOld.cs" />
      <Compile Include="Assets\CodeMonkey\Utils\Button_Sprite.cs" />
      <Compile Include="Assets\CodeMonkey\Assets.cs" />
      <Compile Include="Assets\Scripts\Priority Queue\GenericPriorityQueueNode.cs" />
@@ -96,7 +95,9 @@
      <Compile Include="Assets\Scripts\Priority Queue\SimplePriorityQueue.cs" />
      <Compile Include="Assets\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\CodeMonkey\Utils\FunctionPeriodic.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerLife.cs" />
+     <Compile Include="Assets\Scripts\Platform\Spikes.cs" />
+     <Compile Include="Assets\Scripts\Player\Player.cs" />
+     <Compile Include="Assets\Scripts\Player\CharacterController2d.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
