--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Platform\InteractableObj.cs" />
      <Compile Include="Assets\Scripts\Priority Queue\Properties\AssemblyInfo.cs" />
      <Compile Include="Assets\Scripts\LightObject\LightManager.cs" />
+     <Compile Include="Assets\Prefab\BtnStar.cs" />
      <Compile Include="Assets\Scripts\Priority Queue\FastPriorityQueueNode.cs" />
      <Compile Include="Assets\CodeMonkey\Utils\UI_TextComplex.cs" />
      <Compile Include="Assets\Scripts\old\PlayerOld.cs" />
@@ -85,7 +86,7 @@
      <Compile Include="Assets\Scripts\Priority Queue\SimplePriorityQueue.cs" />
      <Compile Include="Assets\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\CodeMonkey\Utils\FunctionPeriodic.cs" />
-     <Compile Include="Assets\Prefab\BtnStar.cs" />
+     <Compile Include="Assets\Gif.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
